# ASCIIDesk

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
crates/asciidesk-cli/: Cargo.toml
crates/asciidesk-cli/src/: main.rs
crates/asciidesk-client-tui/: Cargo.toml
crates/asciidesk-client-tui/src/: lib.rs
crates/asciidesk-core/: Cargo.toml
crates/asciidesk-core/src/: lib.rs
crates/asciidesk-host/: Cargo.toml
crates/asciidesk-host/src/: desktop.rs  input.rs  lib.rs  session_hijack.rs
crates/asciidesk-host/tests/: integration.rs
crates/asciidesk-protocol/: Cargo.toml
crates/asciidesk-protocol/src/: lib.rs
crates/asciidesk-rendezvous/: Cargo.toml
crates/asciidesk-rendezvous/src/: lib.rs
crates/asciidesk-transport/: Cargo.toml
crates/asciidesk-transport/src/: lib.rs
docs/: ARCHITECTURE.md  EPICS.md  PROTOCOL.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md
