[workspace]
resolver = "2"
members = [
    "crates/asciidesk-cli",
    "crates/asciidesk-protocol",
    "crates/asciidesk-transport",
    "crates/asciidesk-host",
    "crates/asciidesk-client-tui",
    "crates/asciidesk-rendezvous",
    "crates/asciidesk-core",
]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
clap = { version = "4.5.2", features = ["derive", "env"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.26.1"
portable-pty = "0.9.0"
dirs = "5.0.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
chrono = { version = "0.4.35", features = ["serde"] }
thiserror = "1.0.58"
base64 = "0.21.7"
hex = "0.4.3"
local-ip-address = "0.5.0"
xcap = "0.9.4"
image = "0.24.9"
