[package]
name = "asciidesk-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
