[package]
name = "asciidesk-rendezvous"
version = "0.1.0"
edition = "2021"

[dependencies]
asciidesk-core = { path = "../asciidesk-core" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
