[package]
name = "asciidesk-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
asciidesk-protocol = { path = "../asciidesk-protocol" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
